--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --color-de-link: #000000;
     --color-de-texto-oscuro:#464646;
     --color-de-fondo-azul: #EAF2FD;
-    --color-de-texto-claro:#A2A2A2;
+    --color-de-texto-claro:#EAF2FD;
     --color-de-borde-azul:#2A7AE4;
     --color-de-borde-gris:#C8C8C8;
 }
@@ -223,48 +223,72 @@ section{
     text-align: center;
 }
 /*------------------------------ Sección de Contacto ---------------------------------*/
-
-.contacto__campo-container {
-    position: relative;
-    margin-bottom: 20px;
+.contacto{
+    background-color: var(--color-de-fondo-azul);
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    color: var(--color-de-texto-oscuro);
 }
 
-.contacto__campo {
-    background-color: var(--color-de-fondo);
-    padding: 10px 10px 10px 5px;
-    border: 0.5px solid var(--color-de-borde-gris);
-    color: var(--color-de-texto-claro);
-    border-radius: 6px;
-    outline: none;
-    width: 100%;
+.contacto__titulo{
+    margin: 0px;
+    font-size: 22px;
+}
+.contacto__descripcion{
+    margin: 0px;
+    line-height: 90%;
     font-size: 16px;
-    transition: border-bottom 0.3s ease, color 0.3s ease;
+    text-align: justify;
 }
+.contacto__formulario,
+.contacto__campo-container{
+    display: flex;
+    flex-direction: column;
 
-.contacto__campo:focus {
-    border-bottom: 3px solid var(--color-de-borde-azul);
 }
-
-.contacto__label {
-    position: absolute;
-    top: 10px;
-    left: 5px;
+.contacto__formulario{
+    gap: 32px;
+}
+.contacto__campo{
+    height: 28px;
     font-size: 16px;
-    color: var(--color-de-label);
-    pointer-events: none;
-    transition: 0.3s ease-in-out;
+    padding: 12px;
+    border: none;
+    border-bottom: 2px solid var(--color-de-borde-gris);
 }
-
-.contacto__campo:focus + .contacto__label,
-.contacto__campo:not(:placeholder-shown) + .contacto__label {
-    top: -10px;
-    left: 5px;
-    font-size: 12px;
-    color: var(--color-de-label-activo);
+.contacto__campo:hover,
+.contacto__campo:focus,
+.contacto__campo:active{
+    border-top: none!important;
+    border-bottom: 2px solid var(--color-de-borde-azul)!important;
 }
-
-.contacto__campo:hover {
-    border-bottom: 3px solid var(--color-de-borde-azul);
+.contacto__campo--textarea{
+    height: 107px;
+    
+    font-family: 'Raleway', sans-serif;
+}
+.contacto__boton{
+    width: 40%;
+    border: none;
+    border-radius: 0px;
+    background: var(--color-de-borde-azul);
+    color: white;
+    padding: 12px 16px;
+    font-size: 14px;
+    font-weight: 600;
+}
+/* ------------------------------ Footer ---------------------------------------*/
+.footer{
+    padding: 16px;
+}
+.footer__descripcion,
+.footer__year{
+    text-align: center;
+    margin: 0px;
+    font-weight: 500;
+    color: var(--color-de-texto-oscuro);
 }
 /* ------------------------------ Responsividad ---------------------------------------*/
 
